--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,8 @@ navbar-border-col: "#DDDDDD"
 page-col: "#FFFFFF"
 text-col: "#404040"
 link-col: "#008AFF"
-hover-col: "#0085A1"
+#hover-col: "#0085A1"
+hover-col: "#8338EC"
 footer-col: "#EAEAEA"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
