--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: Patrick Döring
+title: Home
 
 # Your name to show in the footer
 author: Patrick Döring
