--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,8 @@ text-col: "#404040"
 link-col: "#008AFF"
 #hover-col: "#0085A1"
 hover-col: "#8338EC"
-footer-col: "#EAEAEA"
+#footer-col: "#EAEAEA"
+footer-col: "linear-gradient(to right, #FF006E, #FFBE0B); "
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
